feat: fixed all typos on htmls

--- a/public/PCEconomic/src/main/resources/templates/aboutus.html
+++ b/public/PCEconomic/src/main/resources/templates/aboutus.html
@@ -7,30 +7,36 @@
             <h1 class="text-center mt-2 mb-4">Sobre Nosotros</h1>
             <div class="row justify-content-center">
                 <div class="row col-xl-6 col-sm-12">
-                    <p>PCEconomic es una tienda online líder en la venta de productos con una relación calidad-precio
+                    <p>
+                        PCEconomic es una tienda online líder en la venta de productos con una relación calidad-precio
                         inigualable. Desde nuestro sitio web, ofrecemos una amplia gama de productos electrónicos,
                         informáticos y tecnológicos, así como también artículos para el hogar y el jardín.
                     </p>
 
-                    <p>Ubicados en Manacor, en las Islas Baleares, PCEconomic se ha ganado la confianza de nuestros
+                    <p>
+                        Ubicados en Manacor, en las Islas Baleares, PCEconomic se ha ganado la confianza de nuestros
                         clientes por ofrecer productos de alta calidad a precios competitivos. En nuestra tienda en
                         línea, los clientes pueden encontrar todo lo que necesitan para equipar su hogar o negocio con
                         los últimos dispositivos electrónicos y tecnológicos.
                     </p>
 
-                    <p>Nos enorgullece ofrecer una experiencia de compra en línea sencilla y fácil de usar. Con solo
+                    <p>
+                        Nos enorgullece ofrecer una experiencia de compra en línea sencilla y fácil de usar. Con solo
                         unos pocos clics, nuestros clientes pueden encontrar y comprar lo que necesitan, con envío a
                         cualquier lugar de España.
                     </p>
-                    <p>En PCEconomic, nos esforzamos por mantener un alto nivel de calidad en nuestros productos y
+                    <p>
+                        En PCEconomic, nos esforzamos por mantener un alto nivel de calidad en nuestros productos y
                         servicios. Nos aseguramos de que cada artículo que vendemos sea de la mejor calidad posible, y
                         ofrecemos una garantía de satisfacción del cliente para todos nuestros productos.
                     </p>
-                    <p>Además, nuestro equipo de atención al cliente está siempre a disposición para responder cualquier
+                    <p>
+                        Además, nuestro equipo de atención al cliente está siempre a disposición para responder cualquier
                         pregunta o preocupación que pueda tener el cliente. Nos enorgullece ofrecer un servicio al
                         cliente excepcional y una experiencia de compra en línea sin problemas.
                     </p>
-                    <p>En resumen, PCEconomic es una tienda online de confianza que ofrece productos de calidad a
+                    <p>
+                        En resumen, PCEconomic es una tienda online de confianza que ofrece productos de calidad a
                         precios competitivos. Si necesita cualquier dispositivo electrónico o tecnológico, artículos
                         para el hogar o el jardín, no busque más allá de PCEconomic. ¡Visítenos en línea o en nuestra
                         tienda en Manacor en Ses Tapereres, 32, 07500 Manacor, Balearic Islands, y descubra lo que
