--- a/public/PCEconomic/src/main/resources/templates/compra.html
+++ b/public/PCEconomic/src/main/resources/templates/compra.html
@@ -10,7 +10,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
             <li class="breadcrumb-item" aria-current="page">Carrito</li>
-            <li class="breadcrumb-item" aria-current="page">Direcciones de Envio</li>
+            <li class="breadcrumb-item" aria-current="page">Direcciones de Envío</li>
             <li class="breadcrumb-item active" aria-current="page">Pasarela de pago</li>
         </ol>
     </nav>
@@ -20,7 +20,7 @@
         <div class="row">
             <span class="h4 col-6 mb-4 text-pc-economic-dark">Subtotal artículos</span>
             <span class="col-6 mb-4 text-center text-pc-economic-light h4" id="subtotal"> - </span>
-            <span class="h4 col-6 text-pc-economic-dark">Envío estimado PcEconomic</span>
+            <span class="h4 col-6 text-pc-economic-dark">Envío estimado PCEconomic</span>
             <span class="col-6 text-center text-pc-economic-light h4" id="envio"> - </span>
             <div id="error" class="mt-2 mb-2"></div>
             <hr class="border border-2 opacity-50 mt-2 col-11">
