--- a/public/PCEconomic/src/main/resources/templates/lostpassword.html
+++ b/public/PCEconomic/src/main/resources/templates/lostpassword.html
@@ -19,7 +19,7 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <label class="form-label">Correo Electronico</label>
+                        <label class="form-label">Correo Electrónico</label>
                         <input th:field="*{email}" type="text" class="form-control" placeholder="Correo Electronico"
                                aria-label="Email Address" required>
                     </div>
