--- a/public/PCEconomic/src/main/resources/templates/pagoerror.html
+++ b/public/PCEconomic/src/main/resources/templates/pagoerror.html
@@ -9,7 +9,7 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
                     <li class="breadcrumb-item" aria-current="page">Carrito</li>
-                    <li class="breadcrumb-item" aria-current="page">Direcciones de Envio</li>
+                    <li class="breadcrumb-item" aria-current="page">Direcciones de Envío</li>
                     <li class="breadcrumb-item" aria-current="page">Pasarela de pago</li>
                     <li class="breadcrumb-item active" aria-current="page">Error de pago</li>
                 </ol>
@@ -25,8 +25,8 @@
                         de que todo esté en orden.</p>
 
                     <div>
-                        <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/}">Explorar articulos</a>
-                        <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/areaclients}">Area Clientes</a>
+                        <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/}">Explorar artículos</a>
+                        <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/areaclients}">Área de Clientes</a>
                     </div>
                 </div>
             </div>
