--- a/public/PCEconomic/src/main/resources/templates/confirmregister.html
+++ b/public/PCEconomic/src/main/resources/templates/confirmregister.html
@@ -6,9 +6,8 @@
     <main class="container bg-cont mt-5 p-3">
         <div class="d-flex flex-column justify-content-center align-items-center">
             <h2 class="mt-4">Confirma tu registro</h2>
-            <h3 class="mt-3">Gracias por registrarse en nuestro sitio. Mire su bandeja de entrada para confirmar su
-                registro.</h3>
-            <h3>Muchas gracias!</h3>
+            <h3 class="mt-3">Gracias por registrarse en nuestro sitio. Mire su bandeja de entrada para confirmar su registro.</h3>
+            <h3>¡Muchas gracias!</h3>
             <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/}">Explorar articulos</a>
         </div>
     </main>
