--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -8,7 +8,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
             <li class="breadcrumb-item" aria-current="page">Carrito</li>
-            <li class="breadcrumb-item active" aria-current="page">Direcciones de Envio</li>
+            <li class="breadcrumb-item active" aria-current="page">Direcciones de Envío</li>
         </ol>
     </nav>
     <h1 class="text-center mt-5 mb-5">Tramitar pedido <span class="h5" id="productos"></span></h1>
@@ -16,7 +16,7 @@
         <h2 class="text-pc-economic-dark h3 text-center"> Escribe la dirección de envío</h2>
         <div class="form-group mt-1 mb-3 row">
             <div class="col-12 row justify-content-center">
-                <h5 class="col-12 text-center mt-4">Actualmente no tienes direcciones prueba a añadir una a tu perfil</h5>
+                <h5 class="col-12 text-center mt-4">Actualmente, no tienes direcciones, prueba a añadir una a tu perfil</h5>
                 <button type="button" class="btn btn-pc-economic-default mt-3 col-6" data-bs-toggle="modal" data-bs-target="#exampleModal">Añadir direccion</button>
             </div>
         </div>
@@ -31,7 +31,7 @@
                 <hr class="border border-2 opacity-50 mt-2 col-11">
                 <span class="h4 col-6 mb-4 text-pc-economic-dark">Subtotal artículos</span>
                 <span class="col-6 mb-4 text-center text-pc-economic-light h4" id="subtotal"> - </span>
-                <span class="h4 col-6 text-pc-economic-dark">Envío estimado PcEconomic</span>
+                <span class="h4 col-6 text-pc-economic-dark">Envío estimado PCEconomic</span>
                 <span class="col-6 text-center text-pc-economic-light h4" id="envio"> - </span>
                 <div id="error" class="mt-2 mb-2"></div>
                 <hr class="border border-2 opacity-50 mt-2 col-11">
@@ -51,7 +51,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Añadir
-                            Direccion</h1>
+                            Dirección</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                 aria-label="Close"></button>
                     </div>
@@ -62,62 +62,85 @@
 
                                 <div class="col-12">
                                     <label for="fullname">Nombre completo</label>
-                                    <input th:field="*{nombre}" class="form-control" type="text" name="direccion"
+                                    <input th:field="*{nombre}" class="form-control"
+                                           type="text"
+                                           th:placeholder="${direccio.fullName}"
+                                           name="direccion"
                                            id="fullname" required
                                            placeholder="Nombre completo"/>
                                 </div>
 
                                 <div class="col-12">
-                                    <label for="telefon">Telefono</label>
-                                    <input th:field="*{telefono}" class="form-control" type="text" name="direccion"
-                                           id="telefon" required
+                                    <label for="telephone2">Teléfono</label>
+                                    <input th:field="*{telefono}"
+                                           class="form-control" type="text"
+                                           name="direccion"
+                                           th:placeholder="${direccio.phone}"
+                                           id="telephone2" required
                                            placeholder="Telefono"/>
                                 </div>
 
                                 <div class="col-12">
-                                    <label for="direccion">Linea de direccion 1</label>
-                                    <input th:field="*{calle}" class="form-control" type="text" name="direccion2"
-                                           required
+                                    <label for="street2">Línea de dirección
+                                        1</label>
+                                    <input th:field="*{calle}" class="form-control"
+                                           type="text"
+                                           name="direccion2"
+                                           id="street2" required
+                                           th:placeholder="${direccio.streetandnumber}"
                                            placeholder="Nombre y numero de la calle"/>
-                                    <input th:field="*{direccion}" class="form-control" type="text" name="direccion"
-                                           id="direccion" required
+                                    <input th:field="*{direccion}"
+                                           class="form-control" type="text"
+                                           name="direccion"
+                                           th:placeholder="${direccio.address}"
+                                           id="direction2" required
                                            placeholder="Apartamento, suite, unidad, edificio o piso"/>
 
                                 </div>
 
                                 <div class="col-6">
-                                    <label for="city">Ciudad</label>
+                                    <label for="city2">Ciudad</label>
                                     <input th:field="*{ciudad}"
-                                           class="form-control" type="text" name="ciudad"
-                                           id="city" required
+                                           class="form-control" type="text"
+                                           name="ciudad"
+                                           th:placeholder="${direccio.city}"
+                                           id="city2" required
                                            placeholder="Ciudad"/>
                                 </div>
 
                                 <div class="col-6">
-                                    <label for="cp">Codigo Postal</label>
+                                    <label for="postalcode2">Código postal</label>
                                     <input th:field="*{codigoPostal}"
-                                           class="form-control" type="text" name="cp" id="cp"
+                                           class="form-control" type="text"
+                                           name="cp" id="postalcode2"
                                            required
+                                           th:placeholder="${direccio.postalCode}"
                                            placeholder="Codigo Postal"/>
                                 </div>
 
                                 <div class="col-4">
-                                    <label for="country">Pais</label>
+                                    <label for="country2">País</label>
                                     <input th:field="*{pais}"
-                                           class="form-control" type="text" name="pais" id="country" required
+                                           class="form-control" type="text"
+                                           name="pais" id="country2"
+                                           required
+                                           th:placeholder="${direccio.country}"
                                            placeholder="Pais"/>
                                 </div>
                                 <div class="col-8">
-                                    <label for="province">Provincia</label>
+                                    <label for="province2">Provincia</label>
                                     <input th:field="*{provincia}"
-                                           class="form-control" type="text" name="provincia" id="province" required
+                                           class="form-control" type="text"
+                                           name="provincia"
+                                           th:placeholder="${direccio.province}"
+                                           id="province2" required
                                            placeholder="Provincia"/>
                                 </div>
 
                                 <div class="col-12">
-                                    <input th:field="*{principal}" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">
-                                        Es esta tu direccion principal?
+                                    <input th:field="*{principal}" class="form-check-input" th:placeholder="${direccio.isPrincipal}" type="checkbox" value="" id="principal2">
+                                    <label class="form-check-label" for="principal2">
+                                        ¿Es esta tu dirección principal?
                                     </label>
                                 </div>
                             </div>
