--- a/public/PCEconomic/src/main/resources/templates/pagorealizado.html
+++ b/public/PCEconomic/src/main/resources/templates/pagorealizado.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head(title='Pago Realizado | PCEconomic', description='Pagina de redireccion cuando finalizas un pago')"></head>
+    <head th:replace="layout/layout :: head(title='Pago Realizado | PCEconomic', description='Pagina de redireccion cuando finalizas un pago')"></head>
 
-<body class="bgbd">
-<header th:replace="layout/layout :: header2"></header>
-<main class="container bg-cont mt-md-5 mt-5">
-    <nav aria-label="breadcrumb mt-2">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
-            <li class="breadcrumb-item" aria-current="page">Carrito</li>
-            <li class="breadcrumb-item" aria-current="page">Direcciones de Envio</li>
-            <li class="breadcrumb-item" aria-current="page">Pasarela de pago</li>
-            <li class="breadcrumb-item active" aria-current="page">Pago Realizado</li>
-        </ol>
-    </nav>
-    <div class="d-flex flex-row-reverse">
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <div class="fs-2 mb-3 text-success">
-                <i class="bi bi-bag-check"></i>
-                PAGO REALIZADO
-            </div>
-            <p class="mt-3 fs-5 text-center">El pago que usted ha hecho se ha realizado correctamente, a continuacion puede decidir si seguir comprando o ir a su area de clientes donde puede ver los pedidos que ha realizado y poder generar un PDF de la factura completa. </p>
+    <body class="bgbd">
+        <header th:replace="layout/layout :: header2"></header>
+        <main class="container bg-cont mt-md-5 mt-5">
+            <nav aria-label="breadcrumb mt-2">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+                    <li class="breadcrumb-item" aria-current="page">Carrito</li>
+                    <li class="breadcrumb-item" aria-current="page">Direcciones de Envio</li>
+                    <li class="breadcrumb-item" aria-current="page">Pasarela de pago</li>
+                    <li class="breadcrumb-item active" aria-current="page">Pago Realizado</li>
+                </ol>
+            </nav>
+            <div class="d-flex flex-row-reverse">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="fs-2 mb-3 text-success">
+                        <i class="bi bi-bag-check"></i>
+                        PAGO REALIZADO
+                    </div>
+                    <p class="mt-3 fs-5 text-center">El pago que usted ha hecho se ha realizado correctamente, a
+                        continuación puede decidir si seguir comprando o ir a su área de clientes donde puede ver los
+                        pedidos que ha realizado y poder generar un PDF de la factura completa. </p>
+                    <div>
 
-            <div>
-                <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/}">Explorar articulos</a>
-                <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/areaclients}">Area Clientes</a>
+                        <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/}">Explorar articulos</a>
+                        <a class="btn btn-pc-economic-dark mt-3 mb-5" th:href="@{/areaclients}">Area Clientes</a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-</main>
-<div th:replace="layout/layout.html :: jquery"></div>
-<footer th:replace="layout/layout.html :: footer"></footer>
-</body>
+        </main>
+        <div th:replace="layout/layout.html :: jquery"></div>
+        <footer th:replace="layout/layout.html :: footer"></footer>
+    </body>
 </html>
