--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -13,75 +13,80 @@
             </ol>
         </nav>
 
-        <h1 class="text-center">Registrate Aqui!</h1>
+        <h1 class="text-center">¡Registrate Aquí!</h1>
 
         <div class="d-flex justify-content-center align-items-center">
             <form class="col-sm-12 col-xl-5 needs-validation" th:action="@{/register}" th:object="${registerForm}" method="post"
                   novalidate>
                 <div class="row">
                     <div class="col-12 mb-3">
-                        <label for="name" class="form-label">Nombre</label>
+                        <label for="name" class="form-label">Nombre *</label>
                         <input th:field="*{name}" id="name" type="text" class="form-control" placeholder="Nombre"
                                aria-label="Name" required>
-                        <div class="invalid-feedback">Porfavor, introduce un nombre.</div>
+                        <div class="invalid-feedback">Por favor, introduzca su nombre.</div>
                     </div>
-                    <label for="surname1" class="form-label">Apellidos</label>
                     <div class="col-6 mb-3">
+                        <label for="surname1" class="form-label">Primer Apellido *</label>
                         <input th:field="*{surname1}" type="text" class="form-control" placeholder="Primer Apellido"
                                aria-label="First name" id="surname1" required>
                         <div class="invalid-feedback">
-                            Inserte su primer apellido.
+                            Por favor, inserte su primer apellido.
                         </div>
                     </div>
                     <div class="col-6 mb-3">
+                        <label for="surname1" class="form-label">Segundo Apellido</label>
                         <input th:field="*{surname2}" type="text" class="form-control" placeholder="Segundo Apellido"
                                aria-label="Last name">
                     </div>
                     <div class="col-6 mb-3">
-                        <label for="dni" class="form-label">DNI</label>
+                        <label for="dni" class="form-label">DNI *</label>
                         <input th:field="*{dni}" type="text" class="form-control" placeholder="DNI"
                                aria-label="DNI" required id="dni">
                         <div class="invalid-feedback">
-                            Inserte su DNI.
+                            Por favor, inserte su DNI.
                         </div>
                     </div>
                     <div class="col-6 mb-3">
-                        <label for="telephone" class="form-label">Telefono</label>
+                        <label for="telephone" class="form-label">Teléfono *</label>
                         <input th:field="*{telefon}" type="text" class="form-control" placeholder="Telefono"
                                aria-label="Telefon" required id="telephone">
                         <div class="invalid-feedback">
-                            Inserte su telefono.
+                            Por favor, inserte su telefono.
                         </div>
                     </div>
                     <div class="col-12 mb-3">
-                        <label for="email" class="form-label">Correo Electronico</label>
+                        <label for="email" class="form-label">Correo Electrónico *</label>
                         <input th:field="*{email}" type="text" class="form-control" placeholder="Correo Electronico"
                                aria-label="Email Address" required id="email">
                         <div class="invalid-feedback">
-                            Inserte su correo electronico.
+                            Por favor, inserte su correo electrónico.
                         </div>
                     </div>
                     <div class="col-6 mb-3">
-                        <label for="password" class="form-label">Contraseña</label>
+                        <label for="password" class="form-label">Contraseña *</label>
                         <input th:field="*{password}" type="password" class="form-control" placeholder="Contraseña"
                                aria-label="Contraseña" required id="password">
                         <div class="invalid-feedback">
-                            Inserte su contraseña.
+                            Por favor, inserte su contraseña.
                         </div>
                     </div>
                     <div class="col-6 mb-3">
-                        <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
+                        <label for="confirmPassword" class="form-label">Confirmar Contraseña *</label>
                         <input th:field="*{confirmPassword}" type="password" class="form-control"
                                id="confirmPassword"
                                placeholder="Confirmar Contraseña"
                                aria-label="Confirmar Contraseña" required>
                         <div class="invalid-feedback">
-                            Confirme su contraseña.
+                            Por favor, confirme su contraseña.
                         </div>
                     </div>
                 </div>
                 <div class="text-center mt-3">
                     <button type="submit" class="btn btn-pc-economic-dark">Registrar</button>
+                </div>
+
+                <div class="alert alert-danger" role="alert">
+                    <strong>*</strong> Todos los campos son requeridos
                 </div>
 
                 <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('name')}">
