feat: an alert of what camps are required when registering

--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -85,7 +85,7 @@
                     <button type="submit" class="btn btn-pc-economic-dark">Registrar</button>
                 </div>
 
-                <div class="alert alert-danger" role="alert">
+                <div class="m-1 mt-3 alert alert-danger" role="alert">
                     <strong>*</strong> Todos los campos son requeridos
                 </div>
 
