feat: fixed all typos on the returning messages of the server & changed email formats

--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -76,7 +76,10 @@
                             }
                         );
                         if (responseFetch.ok) window.location.href = "/";
-                        else window.location.href = "/error";
+                        else {
+                            document.querySelector("#error").style.display = "block";
+                            document.querySelector("#error span").textContent = await responseFetch.text();
+                        }
                     },
                 });
                 google.accounts.id.prompt();
