fix: fixed direcciones envio couldnt find formvalidator.js

--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -137,7 +137,7 @@
 <footer th:replace="layout/layout.html :: footer"></footer>
 </body>
 <div th:replace="layout/layout.html :: jquery"></div>
-<script th:src="@{/js/formValidator.js}"></script>
+<script th:src="@{/js/formvalidator.js}"></script>
 <script>
     $.ajax({
         url: "/api/carrito",
