Direcciones de envio

--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -248,7 +248,7 @@
                     data: {destination: destination},
                     success: function (response) {
                         console.log(response)
-                        var json = response;
+                        var json = JSON.parse(response);
                         if (json.rows[0].elements[0].status === "NOT_FOUND") {
                             $("#error").append("<div class=\"alert alert-danger d-flex justify-content-center align-items-center\" role=\"alert\">\n" +
                                 " <i class='bi bi-exclamation-triangle font-2'></i>" +
