--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -14,7 +14,7 @@
             <div class="col-12 text-center">
                 <h1>MI CUENTA</h1>
                 <p th:text="'Bienvenido de nuevo ' + ${user.name}"></p>
-                <a class="btn btn-danger" href="/logout">
+                <a class="btn btn-danger mb-4" href="/logout">
                     <i class="bi bi-door-open-fill"></i>
                 </a>
             </div>
