index.html acabat

--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -162,7 +162,7 @@
                 for (var img of prop.imatges) {
                     if (img.principal === true) {
                         imgAux =
-                            "https://pceconomic.live/img/productes/" +
+                            "/img/productes/" +
                             prop.article.id +
                             "/" +
                             prop.id +
@@ -237,7 +237,7 @@
                         for (var i of props.imatges) {
                             if (i.principal === true) {
                                 imgAux =
-                                    "https://pceconomic.live/img/productes/" +
+                                    "/img/productes/" +
                                     prop.article.id +
                                     "/" +
                                     props.id +
