--- a/public/PCEconomic/src/main/resources/templates/categoria.html
+++ b/public/PCEconomic/src/main/resources/templates/categoria.html
@@ -1,132 +1,187 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="layout/layout.html :: head(title=${subcategoria.name} + ' | PCEconomic', description='Aqui se listan los articulos de la categoria ' + ${subcategoria.name})"></head>
-    <header th:replace="layout/layout.html :: navbar"></header>
-    <link rel="stylesheet" th:href="@{/css/pagination.css}">
-    <body class="bgbd">
-        <main class="container-lg bg-cont mt-md-5 mt-1" th:attr="data-id-subcat=${subcategoria.id}">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
-                    <li class="breadcrumb-item active" aria-current="page" th:text="${subcategoria.categoria.name} + ' / ' + ${subcategoria.name}"></li>
-                </ol>
-            </nav>
-            <h1 th:text="${subcategoria.name}" class="mt-4 text-center"></h1>
-            <section id="productes" class="row mt-5 justify-content-center">
-                <div id="articles" class="row mt-4 mb-2 p-1 col-11">
-                    <div class="col-12 d-flex justify-content-center">
-                        <div class="spinner-border text-secondary" role="status" id="loading-wheel">
-                            <span class="visually-hidden">Cargando...</span>
-                        </div>
-                    </div>
+<head th:replace="layout/layout.html :: head(title=${subcategoria.name} + ' | PCEconomic', description='Aqui se listan los articulos de la categoria ' + ${subcategoria.name})"></head>
+<header th:replace="layout/layout.html :: navbar"></header>
+<link rel="stylesheet" th:href="@{/css/pagination.css}">
+<body class="bgbd">
+<main class="container-lg bg-cont mt-md-5 mt-1" th:attr="data-id-subcat=${subcategoria.id}">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/"><i class="bi bi-house"></i></a></li>
+            <li class="breadcrumb-item active" aria-current="page"
+                th:text="${subcategoria.categoria.name} + ' / ' + ${subcategoria.name}"></li>
+        </ol>
+    </nav>
+    <h1 th:text="${subcategoria.name}" class="mt-4 text-center"></h1>
+    <section id="productes" class="row mt-5 justify-content-center">
+        <div id="articles" class="row mt-4 mb-2 p-1 col-11">
+            <div class="col-12 d-flex justify-content-center">
+                <div class="spinner-border text-secondary" role="status" id="loading-wheel">
+                    <span class="visually-hidden">Cargando...</span>
                 </div>
-                <div id="pagination" class="row justify-content-center mt-3 mb-3"></div>
-            </section>
-        </main>
-        <footer th:replace="layout/layout.html :: footer"></footer>
-    </body>
-    <div th:replace="layout/layout.html :: jquery"></div>
-    <script src="https://pagination.js.org/dist/2.5.0/pagination.js"></script>
-    <script>
-        $.ajax({
-            url: "/api/propietats",
-            type: "GET",
-            contentType: "application/json",
-            beforeSend: function () {
-                $("#loading-wheel").show();
-            },
-            complete: function () {
-                $("#loading-wheel").remove();
-            },
-            success: function (resp) {
-                var imgAux = "";
-                var arrayCards = []
-                var idSubcategoriaAux = "";
-                for (var prop of resp) {
-                    imgAux = "";
-                    idSubcategoriaAux = "";
-                    for (var img of prop.imatges) {
-                        if (img.principal === true) {
-                            imgAux = '/img/productes/' + prop.article.id + '/' + prop.id + '/' + img.path;
+            </div>
+        </div>
+        <div id="pagination" class="row justify-content-center mt-3 mb-3"></div>
+    </section>
+</main>
+<footer th:replace="layout/layout.html :: footer"></footer>
+</body>
+<div th:replace="layout/layout.html :: jquery"></div>
+<script src="https://pagination.js.org/dist/2.5.0/pagination.js"></script>
+<script>
+    $.ajax({
+        url: "/api/propietats",
+        type: "GET",
+        contentType: "application/json",
+        beforeSend: function () {
+            $("#loading-wheel").show();
+        },
+        complete: function () {
+            $("#loading-wheel").remove();
+        },
+        success: function (resp) {
+            var imgAux = "";
+            var arrayCards = []
+            var idSubcategoriaAux = "";
+            for (var prop of resp) {
+                imgAux = "";
+                idSubcategoriaAux = "";
+                for (var img of prop.imatges) {
+                    if (img.principal === true) {
+                        imgAux = '/img/productes/' + prop.article.id + '/' + prop.id + '/' + img.path;
+                    }
+                }
+
+                for (var sub of prop.article.subcategories) {
+                    idSubcategoriaAux = sub.id;
+                }
+
+                if (imgAux === "") {
+                    imgAux = '/img/static/no-photo.png';
+                }
+                if (prop.esPrincipal === true && idSubcategoriaAux === $('main').data('id-subcat')) {
+                    var val_prop = "";
+
+                    for (var val of prop.valor) {
+                        val_prop += " " + val.valor;
+                    }
+
+
+                    $("#articles").append(
+                        '<div class="link-pc-economic-dark producte col-xs-12 mt-1 p-4 col-sm-6 col-lg-3 text-end justify-content-between border align-items-center text-decoration-none card-deck card align-items-start"  id="propietat' +
+                        prop.id +
+                        '" >' +
+                        '<a href="/article/' +
+                        prop.article.id +
+                        "/" +
+                        prop.id +
+                        '" class="text-decoration-none article-propietat-image">' +
+                        '<img title="' + val_prop + '" data-toggle="tooltip" data-placement="top" src="' +
+                        imgAux +
+                        '" class="card-img-top article-propietat-image">' +
+                        "</a>" +
+                        '<div class="col-12 justify-content-center row" >' +
+                        '<div id="' +
+                        prop.id +
+                        '" class="row justify-content-evenly align-items-center col-12" ></div>' +
+                        '<a href="/article/' +
+                        prop.article.id +
+                        "/" +
+                        prop.id +
+                        '" class="text-decoration-none row">' +
+                        '<span class="text-start h5 col-12">' +
+                        prop.article.nom + val_prop +
+                        "</span>" +
+                        '<span class="text-start h3 text-pc-economic-default bold col-12">' +
+                        formatCurrency(prop.preu) +
+                        "</span>" +
+                        '<span class="text-success col-12 text-start mb-1"> Recíbelo mañana </span>' +
+                        "</a>" +
+                        "</div>" +
+                        "</div>" +
+                        "</div>"
+                    );
+                }
+                var counter = 0;
+                for (props of resp) {
+                    if (
+                        props.esPrincipal === false &&
+                        props.article.id === prop.article.id
+                    ) {
+                        imgAux = "";
+                        for (var i of props.imatges) {
+                            if (i.principal === true) {
+                                imgAux =
+                                    "/img/productes/" +
+                                    prop.article.id +
+                                    "/" +
+                                    props.id +
+                                    "/" +
+                                    i.path;
+                            }
                         }
-                    }
 
-                    for (var sub of prop.article.subcategories) {
-                        idSubcategoriaAux = sub.id;
-                    }
+                        if (imgAux === "") {
+                            imgAux = "/img/static/no-photo.png";
+                        }
+                        var propietats_valors = "";
+                        for(var valor of props.valor) {
+                            propietats_valors += valor.propietat[0].nom + ": " + valor.valor;
+                            if (valor.valor != props.valor[props.valor.length - 1].valor) {
+                                propietats_valors += ", ";
+                            }
+                        }
 
-                    if (imgAux === "") {
-                        imgAux = '/img/static/no-photo.png';
-                    }
-                    if (prop.esPrincipal === true  && idSubcategoriaAux === $('main').data('id-subcat')) {
-                        $('#articles').append(
-                            '<div class="link-pc-economic-dark producte col-xs-12 mt-1 p-4 col-sm-6 col-lg-3 text-end justify-content-between border align-items-center text-decoration-none card-deck card align-items-start"  id="propietat' + prop.id + '" >' +
-                            '<a class="article-propietat-image" href="/article/' + prop.article.id + '/' + prop.id + '" class="text-decoration-none">' +
-                            '<img src="' + imgAux + '" alt="" class="card-img-top article-propietat-image">' +
-                            '</a>' +
-                            '<div class="col-12 justify-content-center row" >' +
-                            '<div id="' + prop.id + '" class="row justify-content-evenly align-items-center col-12" ></div>' +
-                            '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="text-decoration-none row">' +
-                            '<span class="text-start h5 col-12">' + prop.article.nom + '</span>' +
-                            '<span class="text-start h3 text-pc-economic-default bold col-12">' + formatCurrency(prop.preu) + '</span>' +
-                            '<span class="text-success col-12 text-start mb-1"> Recíbelo mañana </span>' +
-                            '</a>' +
-                            '</div>' +
-                            '</div>' +
-                            '</div>'
+                        $("#" + prop.id).append(
+                            '<div class="col-lg-4 col-md-4 mt-4 mb-3 col-4"> <a href=" /article/' +
+                            props.article.id +
+                            "/" +
+                            props.id +
+                            ' " class="text-decoration-none"> <img src="' +
+                            imgAux +
+                            '" alt="img" class="card-img-top article-propietat-image-min" title="' + propietats_valors + '" data-toggle="tooltip" data-placement="top"> </a> </div>'
                         );
-                    }
-                    for (props of resp) {
-                        if (props.esPrincipal === false && props.article.id === prop.article.id) {
-                            imgAux = "";
-                            for (var i of props.imatges) {
-                                if (i.principal === true) {
-                                    imgAux = '/img/productes/' + prop.article.id + '/' + props.id + '/' + i.path;
-                                }
-                            }
 
-                            if (imgAux === "") {
-                                imgAux = '/img/static/no-photo.png';
-                            }
-
-                            $('#' + prop.id).append(
-                                '<div class="col-lg-4 col-md-4 mt-4 mb-3 col-4"> <a href=" /article/' + props.article.id + '/' + props.id + ' " class="text-decoration-none"> <img src="' + imgAux + '" alt="img" class="card-img-top article-propietat-image-min"> </a> </div>'
-                            );
-                        }
+                        $(function () {
+                            $('[data-toggle="tooltip"]').tooltip()
+                        })
                     }
                 }
+            }
 
-                var cartes = document.querySelectorAll(".producte");
+            var cartes = document.querySelectorAll(".producte");
 
-                for (var i = 0; i < cartes.length; i++) {
-                    arrayCards.push(cartes[i]);
-                }
+            for (var i = 0; i < cartes.length; i++) {
+                arrayCards.push(cartes[i]);
+            }
 
-                $("#pagination").pagination({
-                    dataSource: arrayCards,
-                    pageSize: 8,
-                    formatResult: function(data) {
-                        for (var i = 0, len = data.length; i < len; i++) {
-                            data[i].a = data[i].a + ' - bad guys';
-                        }
-                    },
-                    className: 'paginationjs-theme-purple paginationjs-big justify-content-center',
-                    callback: function (data, pagination) {
-                        var html = template(data)
-                        $("#articles").html(html);
+            $("#pagination").pagination({
+                dataSource: arrayCards,
+                pageSize: 8,
+                formatResult: function (data) {
+                    for (var i = 0, len = data.length; i < len; i++) {
+                        data[i].a = data[i].a + ' - bad guys';
                     }
+                },
+                className: 'paginationjs-theme-purple paginationjs-big justify-content-center',
+                callback: function (data, pagination) {
+                    var html = template(data)
+                    $("#articles").html(html);
+                }
+            })
+
+            function template(data) {
+                var html = ''
+                $.each(data, function (index, item) {
+                    html += item.outerHTML
                 })
-                function template(data) {
-                    var html = ''
-                    $.each(data, function (index, item) {
-                        html += item.outerHTML
-                    })
-                    return html;
-                }
-            },
-        });
-        function formatCurrency(amount) {
-            return amount.toFixed(2).toString().replace(".", ",").replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " €";
-        }
-    </script>
+                return html;
+            }
+        },
+    });
+
+    function formatCurrency(amount) {
+        return amount.toFixed(2).toString().replace(".", ",").replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " €";
+    }
+</script>
 </html>
