--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -122,7 +122,7 @@
                             prop[0].article.id +
                             "/" +
                             prop[0].id +
-                            '" class="col-xs-12 col-sm-6 col-lg-3 text-end border text-decoration-none card d-flex align-items-center align-self-center">' +
+                            '" class="col-xs-12 h-100 col-sm-6 col-lg-3 text-end border text-decoration-none card d-flex align-items-center align-self-center">' +
                             '<img src="' +
                             imgAux +
                             '" alt="img" class="mt-2 index-propietat-image">' +
